--- a/Airbnb_Berlin.ipynb
+++ b/Airbnb_Berlin.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 50,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -318,6 +320,312 @@
     "# again print info\n",
     "print(df.info())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we explore the columns/features we are not sure about yet. Based on the value counts we get, we:\n",
+    "* Drop the columns neighbourhood, Neighborhood Group, City, Country Code, Country as we assume that the location is sufficiently described in Latitude + Longitude and that all rental units are located in (Greater) Berlin (to be confirmed exploring Latitude + Longitude). \n",
+    "* Change values of the columns Is Superhost, Instant Bookable from 'f'/'t' to Boolean False/True.\n",
+    "* Drop column Business Travel Ready, as all values are 'f'.\n",
+    "* Drop rows with null values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "value counts in feature Is Superhost:\n",
+      "\n",
+      "f    19948\n",
+      "t     3567\n",
+      "Name: Is Superhost, dtype: int64\n",
+      "\n",
+      "value counts in feature neighbourhood:\n",
+      "\n",
+      "NeukÃ¶lln                    3444\n",
+      "Prenzlauer Berg              2995\n",
+      "Kreuzberg                    2936\n",
+      "Friedrichshain               2782\n",
+      "Mitte                        2212\n",
+      "                             ... \n",
+      "KonradshÃ¶he                    4\n",
+      "Falkenberg                      3\n",
+      "Wartenberg                      1\n",
+      "Stadtrandsiedlung Malchow       1\n",
+      "Blankenfelde                    1\n",
+      "Name: neighbourhood, Length: 93, dtype: int64\n",
+      "\n",
+      "value counts in feature Neighborhood Group:\n",
+      "\n",
+      "Friedrichshain-Kreuzberg    5726\n",
+      "Mitte                       4865\n",
+      "Pankow                      3687\n",
+      "NeukÃ¶lln                   3587\n",
+      "Charlottenburg-Wilm.        1676\n",
+      "Tempelhof - SchÃ¶neberg     1586\n",
+      "Lichtenberg                  743\n",
+      "Treptow - KÃ¶penick          626\n",
+      "Steglitz - Zehlendorf        468\n",
+      "Reinickendorf                296\n",
+      "Marzahn - Hellersdorf        147\n",
+      "Spandau                      129\n",
+      "Name: Neighborhood Group, dtype: int64\n",
+      "\n",
+      "value counts in feature City:\n",
+      "\n",
+      "Berlin                                 23412\n",
+      ".                                         12\n",
+      "SchÃ¶neberg                               10\n",
+      "Mitte                                      8\n",
+      "Weissensee                                 8\n",
+      "*                                          6\n",
+      "berlin                                     4\n",
+      "Wilmersdorf                                4\n",
+      "Friedrichshain                             3\n",
+      "Berlin - Mitte                             3\n",
+      "Berlino                                    3\n",
+      "Berlin-Wilmersdorf                         3\n",
+      "Potsdam                                    3\n",
+      "ÎÎµÏÎ¿Î»Î¯Î½Î¿                           2\n",
+      "Kleinmachnow                               2\n",
+      "Wannsee                                    2\n",
+      "Berlin-Mitte                               2\n",
+      "BerlÃ­n                                    2\n",
+      "Hoppegarten                                2\n",
+      "Berlin - SchÃ¶neberg                       2\n",
+      "Prenzlauer Berg                            2\n",
+      "Berlin-Tiergarten                          1\n",
+      "Berlin- Charlottenburg                     1\n",
+      "Weissensee, Berlin                         1\n",
+      "Mitte/Tiergarten                           1\n",
+      "Berlin Mitte                               1\n",
+      "Berlim                                     1\n",
+      "Berlin (Kreuzberg)                         1\n",
+      "Kreuzberg, Berlin                          1\n",
+      "Baseler StraÃe 91 A,12205 Berlin          1\n",
+      "Berlin NeukÃ¶lln                           1\n",
+      "Mitte/Kreuzberg                            1\n",
+      "Charlottenburg                             1\n",
+      "KÃ¶penick                                  1\n",
+      "Berlin-Zehlendorf                          1\n",
+      "Berlin / Kleinmachnow                      1\n",
+      "Berlin Friedrichshain                      1\n",
+      "Zeuthen                                    1\n",
+      "ææ                                     1\n",
+      "Berlin, friedrichshain                     1\n",
+      "Eichwalde                                  1\n",
+      "Baseler StraÃe 91 A, 12205 Berlin         1\n",
+      "Berlin-NeukÃ¶lln                           1\n",
+      "Woltersdorf                                1\n",
+      "Berlin-Treptow                             1\n",
+      "Berlin/Steglitz                            1\n",
+      "ÐÐµÑÐ»Ð¸Ð½                               1\n",
+      "Berlin, Charlottenburg                     1\n",
+      "10999 Berlin                               1\n",
+      "Erkner                                     1\n",
+      "Hennigsdorf                                1\n",
+      "Berlin-Kreuzberg                           1\n",
+      "MÃ¼hlenbecker Land                         1\n",
+      "Berlin, SchÃ¶neberg                        1\n",
+      "Berlin-Wedding                             1\n",
+      "Berlin Prenzlauer Berg                     1\n",
+      "Berlin (Wedding)                           1\n",
+      "Berlin, Berlin, DE                         1\n",
+      "Berlin-Friedrichshain                      1\n",
+      "Name: City, dtype: int64\n",
+      "\n",
+      "value counts in feature Postal Code:\n",
+      "\n",
+      "10245.0            702\n",
+      "10247.0            644\n",
+      "10437.0            593\n",
+      "10115.0            545\n",
+      "10999.0            478\n",
+      "                  ... \n",
+      "14053.0              1\n",
+      "10997 Kreuzberg      1\n",
+      "13629                1\n",
+      "12107                1\n",
+      "13187 Pankow         1\n",
+      "Name: Postal Code, Length: 396, dtype: int64\n",
+      "\n",
+      "value counts in feature Country Code:\n",
+      "\n",
+      "DE    23534\n",
+      "NL        1\n",
+      "GB        1\n",
+      "Name: Country Code, dtype: int64\n",
+      "\n",
+      "value counts in feature Country:\n",
+      "\n",
+      "Germany           23534\n",
+      "United Kingdom        1\n",
+      "Netherlands           1\n",
+      "Name: Country, dtype: int64\n",
+      "\n",
+      "value counts in feature Is Exact Location:\n",
+      "\n",
+      "t    17649\n",
+      "f     5887\n",
+      "Name: Is Exact Location, dtype: int64\n",
+      "\n",
+      "value counts in feature Property Type:\n",
+      "\n",
+      "Apartment                 20935\n",
+      "Condominium                 577\n",
+      "Loft                        457\n",
+      "House                       436\n",
+      "Serviced apartment          316\n",
+      "Hostel                      183\n",
+      "Townhouse                   108\n",
+      "Bed and breakfast            85\n",
+      "Guest suite                  73\n",
+      "Hotel                        72\n",
+      "Boutique hotel               66\n",
+      "Guesthouse                   57\n",
+      "Other                        41\n",
+      "Bungalow                     23\n",
+      "Boat                         20\n",
+      "Houseboat                    14\n",
+      "Villa                        13\n",
+      "Tiny house                    8\n",
+      "Pension (South Korea)         8\n",
+      "Cottage                       7\n",
+      "Cabin                         7\n",
+      "Camper/RV                     6\n",
+      "Aparthotel                    4\n",
+      "Resort                        3\n",
+      "Castle                        3\n",
+      "Train                         2\n",
+      "Earth house                   2\n",
+      "Casa particular (Cuba)        2\n",
+      "Treehouse                     2\n",
+      "Barn                          1\n",
+      "Hut                           1\n",
+      "Tipi                          1\n",
+      "Cave                          1\n",
+      "Vacation home                 1\n",
+      "Tent                          1\n",
+      "Name: Property Type, dtype: int64\n",
+      "\n",
+      "value counts in feature Room Type:\n",
+      "\n",
+      "Private room       11694\n",
+      "Entire home/apt    11528\n",
+      "Shared room          314\n",
+      "Name: Room Type, dtype: int64\n",
+      "\n",
+      "value counts in feature Instant Bookable:\n",
+      "\n",
+      "f    15658\n",
+      "t     7878\n",
+      "Name: Instant Bookable, dtype: int64\n",
+      "\n",
+      "value counts in feature Business Travel Ready:\n",
+      "\n",
+      "f    23536\n",
+      "Name: Business Travel Ready, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "feat_in_quest = ['Is Superhost', 'neighbourhood', 'Neighborhood Group', 'City', 'Postal Code', 'Country Code', 'Country',\n",
+    "                 'Is Exact Location', 'Property Type', 'Room Type', 'Instant Bookable', 'Business Travel Ready']\n",
+    "for feat in feat_in_quest:\n",
+    "    print('\\n' + 'value counts in feature {}:'.format(feat) + '\\n')\n",
+    "    print(df[feat].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop superfluous location related columns  \n",
+    "# 'Instant Bookable'\n",
+    "col_loc = ['neighbourhood', 'Neighborhood Group', 'City', 'Postal Code', 'Country Code', 'Country']\n",
+    "df = df.drop(labels=col_loc, axis=1)\n",
+    "\n",
+    "# drop Business Travel Ready column  \n",
+    "df = df.drop(labels='Business Travel Ready', axis=1)\n",
+    "\n",
+    "# replace 'f'/'t' by False/True\n",
+    "df = df.replace({'f': False, 't':True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop rows with null values\n",
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 23439 entries, 0 to 456958\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   index              23439 non-null  int64  \n",
+      " 1   Listing ID         23439 non-null  int64  \n",
+      " 2   Is Superhost       23439 non-null  object \n",
+      " 3   Latitude           23439 non-null  float64\n",
+      " 4   Longitude          23439 non-null  float64\n",
+      " 5   Is Exact Location  23439 non-null  bool   \n",
+      " 6   Property Type      23439 non-null  object \n",
+      " 7   Room Type          23439 non-null  object \n",
+      " 8   Accomodates        23439 non-null  int64  \n",
+      " 9   Bathrooms          23439 non-null  float64\n",
+      " 10  Bedrooms           23439 non-null  float64\n",
+      " 11  Beds               23439 non-null  float64\n",
+      " 12  Price              23439 non-null  object \n",
+      " 13  Guests Included    23439 non-null  int64  \n",
+      " 14  Min Nights         23439 non-null  int64  \n",
+      " 15  Instant Bookable   23439 non-null  bool   \n",
+      "dtypes: bool(2), float64(5), int64(5), object(4)\n",
+      "memory usage: 2.7+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# again print info\n",
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
